--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -53,7 +53,7 @@
       </div>
       <div *ngIf="formTitle === formTitles.edit" class="modal-input-check-block">
         <label for="">Deseo actualizar mi contraseña</label>
-        <input type="checkbox" (change)="showPasswordField($event)">
+        <input id="password-check" type="checkbox" (change)="showPasswordField($event)">
       </div>
       <div *ngIf="formTitle === formTitles.add || passWillBeUpdated" class="modal-input-block">
         <label for="">Contraseña</label>
@@ -62,7 +62,7 @@
       </div>
       <div *ngIf="passWillBeUpdated" class="modal-input-check-block">
         <label for="">Mostrar contraseña</label>
-        <input type="checkbox" (change)="showPassword($event)">
+        <input id="show-pass" type="checkbox" (change)="showPassword($event)">
       </div>
       <div class="btns-form-modal">
         <button *ngIf="!newRegister" class="btn-modal-ok" (click)="prepareToUpdate()">Guardar</button>
