--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,6 +1,11 @@
 <main>
   <app-navbar></app-navbar>
-  <app-new-register *ngIf="formVisible" (showForm)="hideForm()"></app-new-register>
+  <app-new-register
+    *ngIf="formVisible"
+    (showForm)="hideForm()"
+    [vehicle_types]="vehicle_types"
+    [status_types]="status_types"
+    [access_types]="access_types"></app-new-register>
   <section class="detected-window {{'border-'+iconSelected.color}}" *ngIf="wasDetected">
     <div (click)="showForm()" class="detected-card {{iconSelected.color+'-card'}}">
       <span class="detected-text">Vehiculo detectado</span>
