--- a/src/app/components/new-register/new-register.component.css
+++ b/src/app/components/new-register/new-register.component.css
@@ -9,6 +9,7 @@
   top: 0;
   left: 0;
   overflow-y: auto;
+  padding: 0 1rem;
 }
 
 .form-register {
@@ -76,8 +77,9 @@ input[type="checkbox"] {
 .input-block input,
 .input-block select
 {
-  padding: 1rem;
+  padding: .8rem;
   outline-color: rgb(89, 179, 206);
+  font-size: 1rem;
 }
 
 .btns-block {
@@ -89,14 +91,14 @@ input[type="checkbox"] {
 .btns-block button {
   width: 100%;
   max-width: 50%;
-  padding: 1rem;
+  padding: .5rem;
   cursor: pointer;
   border: none;
   font-size: 1.2rem;
 }
 
 .btns-block button:nth-child(1) {
-  background: var(--green-btn);
+  background: rgb(0, 119, 255);
   color: white;
 }
 
