Se terminó la creación del reporte de excel

--- a/src/app/components/table-common/table-common.component.css
+++ b/src/app/components/table-common/table-common.component.css
@@ -178,7 +178,14 @@
   flex-grow: 1;
 }
 
-
+.options-block {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  height: fit-content;
+  gap: 1rem;
+  margin-bottom: 2rem;
+}
 
  @media screen and (max-width: 550px) {
   .table-filters {
