--- a/src/app/components/new-register/new-register.component.html
+++ b/src/app/components/new-register/new-register.component.html
@@ -4,7 +4,7 @@
       <div class="close" (click)="hideForm()">
         <i class="fa-solid fa-arrow-left"></i>
       </div>
-      <h2>Nuevo Registro</h2>
+      <h2>Nuevo registro</h2>
     </div>
     <hr>
     <h3>Vehículo</h3>
