--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -7,7 +7,7 @@
   width: 100%;
   display: flex;
   justify-content: space-around;
-  background: rgb(0, 0, 0);
+  background: rgba(0, 0, 0, 0.334);
   box-shadow: 0px 0px 4px 2px rgb(210, 210, 210);
 }
 
@@ -71,9 +71,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    background: rgb(0, 0, 0);
     box-sizing: border-box;
-    box-shadow: 0px 0px 4px 2px rgb(210, 210, 210);
   }
 
   .info {
