--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,11 +1,12 @@
 main {
   width: 100%;
   min-height: 100vh;
-  background-image: url('../../../assets/img/bg-blue.jpg');
-  background-blend-mode: multiply;
-  background-size: cover;
+  /* background-image: url('../../../assets/img/bg-blue.jpg'); */
+  /* background-blend-mode: multiply;
+  background-size: cover; */
+  background-image: radial-gradient(circle at top right, rgb(50, 50, 76),  rgb(104, 175, 255),  rgb(50, 50, 76));
   display: flex;
-  background-repeat: no-repeat;
+  /* background-repeat: no-repeat; */
   justify-content: center;
   align-items: center;
   overflow-y: auto;
