--- a/src/app/components/table-common/table-common.component.css
+++ b/src/app/components/table-common/table-common.component.css
@@ -1,7 +1,7 @@
 .main-paginator{
   width: 100%;
   min-height: fit-content;
-  box-shadow: 1px 1px 5px 2px rgb(205, 205, 205);
+  box-shadow: 1px 1px 5px 2px rgba(26, 26, 26, 0.477);
   background: white;
   padding: 1rem;
 }
@@ -21,6 +21,7 @@
   width: 100%;
   margin-bottom: 1rem;
   font-size: 2rem;
+  color: white;
 }
 
 .table-filters {
