--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,14 +1,23 @@
-.line {
+.container-global {
   width: 100%;
-  border: 1px solid white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .home {
   width: 100%;
+  max-width: 1200px;
   display: flex;
   justify-content: space-around;
   background: rgba(0, 0, 0, 0.334);
   box-shadow: 0px 0px 4px 2px rgb(210, 210, 210);
+}
+
+.line {
+  width: 100%;
+  border: 1px solid white;
+  margin: 1rem 0;
 }
 
 .info {
@@ -65,7 +74,7 @@
   justify-content: center;
 }
 
-@media screen and (max-width:600px) {
+@media screen and (max-width:800px) {
   .home {
     width: 100%;
     display: flex;
