--- a/src/app/components/registers/registers.component.html
+++ b/src/app/components/registers/registers.component.html
@@ -46,6 +46,7 @@
       <sub *ngIf="areErrors" class="error-form">Complete todos los campos correctamente</sub>
     </form>
   </div>
+  <app-footer></app-footer>
   <app-alert
     [title]="modalAlert.title"
     *ngIf="modalAlert.isVisible"
