--- a/src/app/components/vehicles/vehicles.component.html
+++ b/src/app/components/vehicles/vehicles.component.html
@@ -52,6 +52,7 @@
       <sub *ngIf="areErrors" class="error-form">Complete todos los campos correctamente</sub>
     </form>
   </div>
+  <app-footer></app-footer>
   <app-alert
     [title]="modalAlert.title"
     *ngIf="modalAlert.isVisible"
