--- a/src/app/components/new-register/new-register.component.css
+++ b/src/app/components/new-register/new-register.component.css
@@ -112,9 +112,41 @@ input[type="checkbox"] {
   flex-wrap: wrap;
 }
 
+fieldset {
+  padding: 1rem;
+  border: 1px solid rgb(224, 224, 224);
+  gap: 1rem;
+  display: flex;
+  flex-direction: column;
+}
+
+legend {
+  font-weight: bold;
+  margin: 1rem 0;
+  width: auto;
+  padding: 0 10px;
+  border: 1px solid #000;
+  text-align: center;
+}
+
 .block-info {
   flex-grow: 1;
   min-width: 200px;
+  display: flex;
+  gap: 1rem;
+  text-align: left;
+}
+
+.block-info span {
+  text-align: left;
+}
+
+.block-info span:nth-child(1) {
+  font-weight: bold;
+}
+
+.textarea-register {
+  resize: none;
 }
 
 @media screen and (max-width: 600px) {
