--- a/src/app/components/new-register/new-register.component.html
+++ b/src/app/components/new-register/new-register.component.html
@@ -7,61 +7,71 @@
       <h2>Nuevo registro</h2>
     </div>
     <hr>
-    <h3>Vehículo</h3>
-    <div class="checkbox">
-      <input type="checkbox" name="write_enable" id="write_enable" (change)="enableInputPlate($event)">
-      <label for="write_enable">¿Placa no fue leída correctamente?</label>
-    </div>
-    <div class="input-block">
-      <label for="">Numero de Placa</label>
-      <input type="text" name="plate_number" id="plate_number" formControlName="plate_number" [readonly]="plateNumberLocked" (input)="readPlate($event)">
-      <sub class="error-form" *ngIf="errors['plate_number'] !== ''">{{errors['plate_mumber']}}</sub>
-    </div>
-    <div *ngIf="vehicle.length > 0">
-      <div *ngFor="let vehicleLoad of vehicle" class="form-data-block">
-        <div class="block-info">
-          <span>Tipo Vehículo:</span>
-          <span>{{vehicleLoad.vehicle_type_name}}</span>
-        </div>
-        <div class="block-info">
-          <span>Tipo de acceso:</span>
-          <span>{{vehicleLoad.access_type_name}}</span>
-        </div>
-        <div class="block-info">
-          <span>Estado actual:</span>
-          <span>{{vehicleLoad.status_type_name}}</span>
+    <fieldset>
+      <legend>Vehículo</legend>
+      <div class="checkbox">
+        <input type="checkbox" name="write_enable" id="write_enable" (change)="enableInputPlate($event)">
+        <label for="write_enable">¿Desea editar la placa?</label>
+      </div>
+      <div class="input-block">
+        <label for="">Numero de Placa</label>
+        <input type="text" name="plate_number" id="plate_number" formControlName="plate_number" [readonly]="plateNumberLocked" (input)="readPlate($event)">
+        <sub class="error-form" *ngIf="errors['plate_number'] !== ''">{{errors['plate_mumber']}}</sub>
+      </div>
+      <div *ngIf="vehicle.length > 0">
+        <div *ngFor="let vehicleLoad of vehicle" class="form-data-block">
+          <div class="block-info">
+            <span>Placa:</span>
+            <span>{{vehicleLoad.plate_number}}</span>
+          </div>
+          <div class="block-info">
+            <span>Tipo Vehículo:</span>
+            <span>{{vehicleLoad.vehicle_type_name}}</span>
+          </div>
+          <div class="block-info">
+            <span>Tipo de acceso:</span>
+            <span>{{vehicleLoad.access_type_name}}</span>
+          </div>
+          <div class="block-info">
+            <span>Estado actual:</span>
+            <span>{{vehicleLoad.status_type_name}}</span>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="error-form" *ngIf="errors.plate_number !== ''">{{errors.plate_number}}</div>
+      <div class="error-form" *ngIf="errors.plate_number !== ''">{{errors.plate_number}}</div>
+    </fieldset>
     <hr>
-    <h3>Adicionales</h3>
-    <div class="input-block">
-      <label for="">Km de llegada</label>
-      <input type="text" name="dni" id="dni">
-      <sub class="error-form" *ngIf="errors['dni'] !== ''">{{errors['dni']}}</sub>
-    </div>
-    <div class="input-block">
-      <label for="">Km de salida</label>
-      <input type="text" name="dni" id="dni">
-      <sub class="error-form" *ngIf="errors['dni'] !== ''">{{errors['dni']}}</sub>
-    </div>
-    <div class="input-block">
-      <label for="">Destino</label>
-      <input type="text" name="dni" id="dni">
-      <sub class="error-form" *ngIf="errors['dni'] !== ''">{{errors['dni']}}</sub>
-    </div>
-    <div class="input-block">
-      <label for="">Destino</label>
-      <textarea name="" id="" cols="30" rows="10"></textarea>
-      <sub class="error-form" *ngIf="errors['dni'] !== ''">{{errors['dni']}}</sub>
-    </div>
+    <fieldset>
+      <legend>Adicionales</legend>
+      <div class="input-block">
+        <label for="">Km de llegada</label>
+        <input type="text" name="dni" id="dni">
+        <sub class="error-form" *ngIf="errors[''] !== ''">{{errors['']}}</sub>
+      </div>
+      <div class="input-block">
+        <label for="">Km de salida</label>
+        <input type="text" name="dni" id="dni">
+        <sub class="error-form" *ngIf="errors[''] !== ''">{{errors['']}}</sub>
+      </div>
+      <div class="input-block">
+        <label for="">Destino</label>
+        <input type="text" name="dni" id="dni">
+        <sub class="error-form" *ngIf="errors[''] !== ''">{{errors['']}}</sub>
+      </div>
+      <div class="input-block">
+        <label for="">Destino</label>
+        <textarea name="" id="" cols="30" rows="10" class="textarea-register"></textarea>
+        <sub class="error-form" *ngIf="errors['dni'] !== ''">{{errors['dni']}}</sub>
+      </div>
+    </fieldset>
     <hr>
-    <h3>Chofér</h3>
-    <div class="input-block">
-      <label for="">Cédula</label>
-      <input type="text" name="dni" id="dni">
-      <sub class="error-form"></sub>
+    <fieldset>
+      <legend>Chofér</legend>
+      <div class="input-block">
+        <label for="">Cédula</label>
+        <input type="text" name="dni" id="dni" (input)="readDriver($event)">
+        <sub class="error-form"></sub>
+      </div>
       <div *ngIf="driver.length > 0">
         <div *ngFor="let driverLoad of driver" class="form-data-block">
           <div class="block-info">
@@ -82,8 +92,8 @@
           </div>
         </div>
       </div>
-      <div class="not-found" *ngIf="driverLoadError.error">{{driverLoadError.msg}}</div>
-    </div>
+      <sub class="error-form" *ngIf="errors.dni !== ''">{{errors.dni}}</sub>
+    </fieldset>
     <div class="btns-block">
       <button>Guardar</button>
       <button>Cancelar</button>
