Se termno de adaptar el formulario para nuevo registro y se comenzo a cargar datos en tabla

--- a/src/app/components/new-register/new-register.component.css
+++ b/src/app/components/new-register/new-register.component.css
@@ -75,7 +75,8 @@ input[type="checkbox"] {
 }
 
 .input-block input,
-.input-block select
+.input-block select,
+.input-block textarea
 {
   padding: .8rem;
   outline-color: rgb(89, 179, 206);
