--- a/src/app/components/new-register/new-register.component.css
+++ b/src/app/components/new-register/new-register.component.css
@@ -89,13 +89,15 @@ input[type="checkbox"] {
   gap:1rem;
 }
 
-.btns-block button {
+.btns-block button,
+.btns-block div {
   width: 100%;
   max-width: 50%;
   padding: .5rem;
   cursor: pointer;
   border: none;
   font-size: 1.2rem;
+  text-align: center;
 }
 
 .btns-block button:nth-child(1) {
@@ -103,7 +105,7 @@ input[type="checkbox"] {
   color: white;
 }
 
-.btns-block button:nth-child(2) {
+.btns-block div {
   background: rgb(142, 142, 142);
   color: white;
 }
@@ -158,7 +160,8 @@ legend {
     gap:1rem;
   }
 
-  .btns-block button {
+  .btns-block button,
+  .btns-block div {
     width: 100%;
     padding: 1rem;
     max-width: 100%;
