Se finalizó el sistema falta verificar por si acaso algun bug

--- a/src/app/components/error-page/error-page.component.html
+++ b/src/app/components/error-page/error-page.component.html
@@ -1,1 +1,4 @@
-<p>error-page works!</p>
+<section class="section-error">
+  <div class="circle-error">404</div>
+  <div class="text-error">NOT FOUND</div>
+</section>
