--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -9,8 +9,8 @@
         <div class="card-title">Entradas - Vehiculos</div>
         <div class="card">
           <div class="card-info" *ngFor="let data of arrivalData">
-            <span class="card-prop">{{data.name}}</span>
-            <span class="card-number">{{data.total}}</span>
+              <span class="card-prop">{{data.name}}:</span>
+              <span class="card-number">{{data.total}}</span>
           </div>
         </div>
         <hr class="line">
