--- a/src/styles.css
+++ b/src/styles.css
@@ -51,7 +51,10 @@ body {
   width: 100%;
   max-width: 600px;
   border-radius: 10px;
-  border: 5px solid rgba(60, 83, 117, 0.324);
+  border: 5px solid rgba(255, 255, 255, 0.246);
+  background: rgba(255, 255, 255, 0.196);
+  padding: 10px;
+  box-sizing: border-box;
 }
 
 .camera_btns {
